--- a/Percobaan_3.ipynb
+++ b/Percobaan_3.ipynb
@@ -279,7 +279,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Cell code di atas berfungsi untuk mendefinisikan berbagai fungsi preprocessing yang digunakan dalam mempersiapkan citra sebelum proses ekstraksi fitur. Fungsi-fungsi yang dibuat meliputi:\n",
+    "\n",
+    "- **resize** untuk mengubah ukuran citra ke dimensi tertentu dengan interpolasi sederhana,\n",
+    "- **normalize** untuk menormalkan nilai piksel ke rentang 0–255 agar distribusi intensitas lebih seragam,\n",
+    "- **equalization** untuk meningkatkan kontras citra grayscale melalui histogram equalization,\n",
+    "- **median_filter** yang mengurangi noise pada citra dengan filter median,\n",
+    "- **hsv_segmentation** yang melakukan segmentasi warna berbasis ruang warna HSV, khususnya untuk membedakan area hijau (daun sehat) dan coklat (bercak penyakit),\n",
+    "- serta pipeline seperti **percobaan_1**, **percobaan_2**, dan **percobaan_3** yang menggabungkan beberapa tahapan preprocessing mulai dari konversi ke grayscale, resizing, normalisasi, filter median, hingga segmentasi warna.\n",
+    "\n",
+    "Seluruh fungsi ini bertujuan menghasilkan citra yang lebih bersih, seragam, dan siap untuk proses ekstraksi fitur tekstur pada tahap berikutnya. Dengan preprocessing yang optimal, fitur yang dihasilkan akan lebih representatif sehingga dapat meningkatkan performa model klasifikasi.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Preprocessing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "Cell code di bawah ini melakukan proses preprocessing pada seluruh data citra yang telah dibaca sebelumnya. Proses preprocessing yang digunakan adalah pipeline `percobaan_3`, yaitu:\n",
+    "- Segmentasi warna berbasis HSV untuk menyoroti area hijau (daun sehat) dan coklat (bercak penyakit) pada citra,\n",
+    "- Konversi hasil segmentasi ke grayscale,\n",
+    "- Resize citra ke ukuran 128x128 piksel,\n",
+    "- Normalisasi intensitas piksel,\n",
+    "- Filter median untuk mengurangi noise.\n",
+    "\n",
+    "Hasil preprocessing untuk setiap citra disimpan dalam array `dataPreprocessed`. Selanjutnya, kode ini juga menyiapkan dictionary `label_names` untuk memetakan kode label ke nama kelas yang lebih deskriptif. Untuk setiap label, ditampilkan hingga 10 contoh hasil preprocessing dalam bentuk grid gambar grayscale, sehingga kita dapat memvisualisasikan hasil tahapan preprocessing untuk masing-masing kelas sebelum masuk ke tahap ekstraksi fitur. Visualisasi ini membantu memastikan bahwa proses preprocessing berjalan sesuai harapan dan citra sudah siap untuk analisis lebih lanjut."
    ]
   },
   {
@@ -598,6 +629,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cell code diatas berfungsi untuk menghitung nilai kontras dari matriks GLCM pada setiap gambar yang telah diproses. Untuk setiap gambar, nilai kontras dihitung pada empat sudut berbeda, yaitu 0°, 45°, 90°, dan 135°, menggunakan fungsi contrast yang telah didefinisikan sebelumnya. Hasil perhitungan untuk masing-masing sudut kemudian disimpan ke dalam list Kontras0, Kontras45, Kontras90, dan Kontras135. Dengan demikian, setiap gambar akan memiliki empat nilai kontras yang merepresentasikan tingkat perbedaan intensitas piksel pada berbagai arah, yang nantinya dapat digunakan sebagai fitur dalam proses analisis atau klasifikasi citra."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 87,
    "metadata": {},
@@ -612,6 +650,13 @@
     "    dissimilarity45.append(Dis45)\n",
     "    dissimilarity90.append(Dis90)\n",
     "    dissimilarity135.append(Dis135)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cell code di atas merupakan proses perhitungan nilai dissimilarity (ketidaksamaan) dari matriks GLCM pada setiap gambar yang telah diproses. Untuk setiap gambar, nilai dissimilarity dihitung pada empat sudut berbeda, yaitu 0°, 45°, 90°, dan 135°, menggunakan fungsi dissimilarity yang telah didefinisikan sebelumnya. Hasil perhitungan untuk masing-masing sudut kemudian disimpan ke dalam list dissimilarity0, dissimilarity45, dissimilarity90, dan dissimilarity135. Dengan demikian, setiap gambar akan memiliki empat nilai dissimilarity yang merepresentasikan tingkat ketidaksamaan tekstur pada berbagai arah, yang nantinya dapat digunakan sebagai fitur dalam proses analisis atau klasifikasi citra."
    ]
   },
   {
@@ -632,6 +677,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cell code diatas merupakan proses perhitungan nilai homogenitas dari matriks GLCM pada setiap gambar yang telah diproses. Untuk setiap gambar, nilai homogenitas dihitung pada empat sudut berbeda, yaitu 0°, 45°, 90°, dan 135°, menggunakan fungsi homogenity yang telah didefinisikan sebelumnya. Hasil perhitungan untuk masing-masing sudut kemudian disimpan ke dalam list homogenity0, homogenity45, homogenity90, dan homogenity135. Dengan demikian, setiap gambar akan memiliki empat nilai homogenitas yang merepresentasikan tingkat keseragaman tekstur pada berbagai arah, yang nantinya dapat digunakan sebagai fitur dalam proses analisis atau klasifikasi citra."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 89,
    "metadata": {},
@@ -646,6 +698,13 @@
     "    entropy45.append(E45)\n",
     "    entropy90.append(E90)\n",
     "    entropy135.append(E135)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cell code diatas merupakan proses perhitungan nilai entropi dari matriks GLCM pada setiap gambar yang telah diproses. Untuk setiap gambar, nilai entropi dihitung pada empat sudut berbeda, yaitu 0°, 45°, 90°, dan 135°, menggunakan fungsi entropyGlcm yang telah didefinisikan sebelumnya. Hasil perhitungan untuk masing-masing sudut kemudian disimpan ke dalam list entropy0, entropy45, entropy90, dan entropy135. Dengan demikian, setiap gambar akan memiliki empat nilai entropi yang merepresentasikan tingkat ketidakpastian atau keragaman tekstur pada berbagai arah, yang nantinya dapat digunakan sebagai fitur dalam proses analisis atau klasifikasi citra.\n"
    ]
   },
   {
@@ -666,6 +725,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "Cell code di atas digunakan untuk menghitung nilai ASM (Angular Second Moment) dari matriks GLCM pada setiap gambar yang telah diproses. Untuk setiap gambar, nilai ASM dihitung pada empat sudut berbeda, yaitu 0°, 45°, 90°, dan 135°, menggunakan fungsi ASM yang telah didefinisikan sebelumnya. Hasil perhitungan untuk masing-masing sudut kemudian disimpan ke dalam list ASM0, ASM45, ASM90, dan ASM135. Dengan demikian, setiap gambar akan memiliki empat nilai ASM yang merepresentasikan tingkat keseragaman pola tekstur pada berbagai arah, yang nantinya dapat digunakan sebagai fitur dalam proses analisis atau klasifikasi citra.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 91,
    "metadata": {},
@@ -680,6 +747,13 @@
     "    energy45.append(ER45)\n",
     "    energy90.append(ER90)\n",
     "    energy135.append(ER135)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cell code di atas digunakan untuk menghitung nilai energi (energy) dari matriks GLCM pada setiap gambar yang telah diproses. Untuk setiap gambar, nilai energi dihitung pada empat sudut berbeda, yaitu 0°, 45°, 90°, dan 135°, menggunakan fungsi energy yang telah didefinisikan sebelumnya. Hasil perhitungan untuk masing-masing sudut kemudian disimpan ke dalam list energy0, energy45, energy90, dan energy135. Dengan demikian, setiap gambar akan memiliki empat nilai energi yang merepresentasikan tingkat keseragaman atau keteraturan tekstur pada berbagai arah, yang nantinya dapat digunakan sebagai fitur dalam proses analisis atau klasifikasi citra."
    ]
   },
   {
@@ -712,7 +786,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Cell code di atas digunakan untuk menggabungkan seluruh nilai fitur tekstur yang telah diekstraksi dari setiap gambar ke dalam satu array fitur utama. Untuk setiap gambar yang telah diproses, fitur-fitur yang diambil meliputi nilai correlation, dissimilarity, contrast, homogeneity, entropy, ASM, dan energy pada empat sudut berbeda (0°, 45°, 90°, dan 135°). Semua nilai fitur tersebut dikumpulkan dalam satu list fitur untuk setiap gambar, lalu seluruh list fitur tersebut dikumpulkan ke dalam list features. Setelah proses penggabungan selesai, list features diubah menjadi array numpy agar lebih mudah digunakan dalam proses analisis atau pelatihan model selanjutnya. Label dari setiap gambar juga dikonversi menjadi array numpy untuk memastikan konsistensi format data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Write the extraction's results to CSV "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "Cell code di bawah digunakan untuk menyimpan seluruh hasil ekstraksi fitur tekstur ke dalam file CSV agar dapat digunakan untuk analisis lebih lanjut atau pelatihan model machine learning. Pertama, seluruh fitur yang telah dihitung (seperti contrast, homogeneity, dissimilarity, entropy, ASM, energy, dan correlation pada berbagai sudut) beserta nama file dan labelnya dikumpulkan ke dalam sebuah dictionary bernama `dataTable`. Dictionary ini kemudian dikonversi menjadi DataFrame menggunakan pandas dan disimpan ke file `hasil_ekstraksi_1.csv` tanpa menyertakan index. Setelah file CSV berhasil dibuat, data hasil ekstraksi dibaca kembali ke dalam DataFrame `hasilEkstrak` untuk memastikan data telah tersimpan dengan benar dan siap digunakan pada tahap berikutnya. Dengan cara ini, seluruh fitur yang telah diekstraksi terdokumentasi dengan rapi dan mudah diakses untuk proses selanjutnya."
    ]
   },
   {
@@ -1150,6 +1239,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cell code di bawah digunakan untuk melakukan seleksi fitur berdasarkan korelasi antar fitur. Pertama, dihitung matriks korelasi dari seluruh fitur (kecuali kolom 'Label' dan 'Filename') menggunakan fungsi `.corr()`. Kemudian, fitur-fitur yang memiliki korelasi sangat tinggi (di atas threshold 0.95) dianggap redundant dan salah satunya akan dihapus agar tidak terjadi multikolinearitas pada model. Proses seleksi dilakukan dengan memeriksa setiap pasangan fitur dan menandai fitur yang memiliki korelasi tinggi untuk dihapus. Setelah proses seleksi selesai, fitur-fitur terpilih disimpan dalam variabel `x_new`, sedangkan label target disimpan di variabel `y`. Terakhir, dilakukan visualisasi matriks korelasi fitur-fitur terpilih menggunakan heatmap dari seaborn untuk memastikan tidak ada lagi fitur yang sangat berkorelasi satu sama lain. Dengan cara ini, hanya fitur-fitur yang saling independen yang digunakan untuk proses modeling selanjutnya."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 94,
    "metadata": {},
@@ -1201,6 +1297,15 @@
    "metadata": {},
    "source": [
     "#### Method ANOVA"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cell code di bawah digunakan untuk melakukan seleksi fitur menggunakan metode ANOVA (Analysis of Variance). Pertama, seluruh fitur (kecuali kolom 'Label' dan 'Filename') diambil sebagai variabel X, sedangkan label target disimpan di variabel y. Kemudian, digunakan `SelectKBest` dengan fungsi skor `f_classif` untuk menghitung skor ANOVA dari setiap fitur terhadap label. Skor ANOVA yang tinggi menunjukkan bahwa fitur tersebut memiliki pengaruh signifikan terhadap target.\n",
+    "\n",
+    "Selanjutnya, fitur-fitur dengan skor ANOVA di atas threshold (misal 5) dipilih sebagai fitur terbaik dan disimpan dalam variabel `x_new`. Hasil seleksi fitur divisualisasikan menggunakan heatmap korelasi dari seaborn untuk memastikan fitur-fitur terpilih tidak saling berkorelasi tinggi. Dengan cara ini, hanya fitur-fitur yang paling relevan dan independen yang digunakan untuk proses modeling selanjutnya."
    ]
   },
   {
@@ -1258,6 +1363,13 @@
    "metadata": {},
    "source": [
     "## Splitting Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cell code di bawah digunakan untuk membagi data fitur hasil seleksi (`x_new`) dan label (`y`) menjadi data latih dan data uji menggunakan fungsi `train_test_split` dari scikit-learn. Data dibagi dengan proporsi 80% untuk data latih dan 20% untuk data uji (`test_size=0.2`). Parameter `random_state=42` digunakan agar pembagian data bersifat reproducible, sedangkan `stratify=y` memastikan distribusi kelas pada data latih dan data uji tetap seimbang sesuai proporsi aslinya. Setelah pembagian, bentuk (jumlah sampel dan fitur) dari data latih dan data uji ditampilkan untuk memastikan proses splitting berjalan dengan benar. Proses ini penting agar model dapat dilatih pada sebagian data dan diuji performanya pada data yang belum pernah dilihat sebelumnya."
    ]
   },
   {
@@ -1327,6 +1439,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Cell code di atas melakukan normalisasi fitur menggunakan metode Standardization (Z-score). Pada proses ini, setiap nilai fitur pada data latih (`X_train`) dan data uji (`X_test`) dikurangi dengan rata-rata (`mean`) dari data latih, lalu dibagi dengan standar deviasi (`std`) dari data latih. Tujuannya adalah agar setiap fitur memiliki rata-rata 0 dan standar deviasi 1, sehingga model machine learning tidak bias terhadap fitur dengan skala yang lebih besar. Normalisasi ini penting untuk memastikan semua fitur berada pada skala yang sama, terutama saat menggunakan algoritma yang sensitif terhadap skala data seperti SVM dan KNN."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Min-Max Scaling"
    ]
   },
@@ -1339,6 +1458,13 @@
     "scaler = MinMaxScaler()\n",
     "X_train = scaler.fit_transform(X_train)\n",
     "X_test = scaler.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cell code di atas melakukan normalisasi fitur menggunakan metode Min-Max Scaling. Pada proses ini, setiap nilai fitur pada data latih (`X_train`) dan data uji (`X_test`) diubah skalanya ke rentang 0 hingga 1 menggunakan `MinMaxScaler` dari scikit-learn. Pertama, scaler di-fit pada data latih untuk menentukan nilai minimum dan maksimum setiap fitur, lalu data latih dan data uji ditransformasikan menggunakan parameter tersebut. Normalisasi ini penting agar semua fitur berada pada skala yang sama, sehingga algoritma machine learning dapat bekerja lebih optimal dan tidak bias terhadap fitur dengan skala yang lebih besar."
    ]
   },
   {
@@ -1380,7 +1506,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Pada tahap ini, didefinisikan tiga model klasifikasi yang akan digunakan, yaitu Random Forest, Support Vector Machine (SVM), dan K-Nearest Neighbors (KNN). Masing-masing model diinisialisasi dengan parameter yang sesuai:\n",
+    "\n",
+    "- **RandomForestClassifier**: Menggunakan 5 pohon keputusan (`n_estimators=5`) dan seed acak (`random_state=42`) untuk memastikan hasil yang konsisten.\n",
+    "- **SVC (Support Vector Classifier)**: Menggunakan kernel radial basis function (`kernel='rbf'`) dan seed acak (`random_state=42`).\n",
+    "- **KNeighborsClassifier**: Menggunakan 5 tetangga terdekat (`n_neighbors=5`).\n",
+    "\n",
+    "Selain itu, dibuat fungsi `generateClassificationReport` untuk menampilkan metrik evaluasi model, meliputi classification report (precision, recall, f1-score), confusion matrix, dan akurasi. Fungsi ini akan digunakan untuk mengevaluasi performa model pada data latih dan data uji. \n",
+    "\n",
+    "Langkah ini penting untuk membandingkan performa berbagai algoritma klasifikasi pada dataset yang sama."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Train Random Forest Classifier"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pada tahap ini, model Random Forest dilatih menggunakan data latih (`X_train`, `y_train`). Setelah pelatihan, model digunakan untuk memprediksi label pada data latih dan data uji. Hasil prediksi kemudian dievaluasi menggunakan fungsi `generateClassificationReport`, yang menampilkan classification report (precision, recall, f1-score), confusion matrix, dan akurasi untuk masing-masing data latih dan data uji. Proses ini bertujuan untuk mengetahui performa model baik pada data yang telah dilatih maupun pada data yang belum pernah dilihat sebelumnya."
    ]
   },
   {
@@ -1450,6 +1598,13 @@
    "metadata": {},
    "source": [
     "### Train SVM Classifier"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pada tahap ini, model Support Vector Machine (SVM) dilatih menggunakan data latih (`X_train`, `y_train`). Setelah pelatihan, model digunakan untuk memprediksi label pada data latih dan data uji. Hasil prediksi kemudian dievaluasi menggunakan fungsi `generateClassificationReport`, yang menampilkan classification report (precision, recall, f1-score), confusion matrix, dan akurasi untuk masing-masing data latih dan data uji. Proses ini bertujuan untuk mengetahui performa model baik pada data yang telah dilatih maupun pada data yang belum pernah dilihat sebelumnya."
    ]
   },
   {
@@ -1523,6 +1678,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pada tahap ini, model K-Nearest Neighbors (KNN) dilatih menggunakan data latih (`X_train`, `y_train`). Setelah pelatihan, model digunakan untuk memprediksi label pada data latih dan data uji. Hasil prediksi kemudian dievaluasi menggunakan fungsi `generateClassificationReport`, yang menampilkan classification report (precision, recall, f1-score), confusion matrix, dan akurasi untuk masing-masing data latih dan data uji. Proses ini bertujuan untuk mengetahui performa model baik pada data yang telah dilatih maupun pada data yang belum pernah dilihat sebelumnya."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 102,
    "metadata": {},
@@ -1590,6 +1752,15 @@
    "metadata": {},
    "source": [
     "## Evaluation With Confusion Matrix"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cell code di bawah digunakan untuk memvisualisasikan confusion matrix dari hasil prediksi tiga model klasifikasi yang telah dilatih, yaitu Random Forest, SVM, dan KNN. Fungsi `plot_confusion_matrix` menerima label sebenarnya (`y_true`), label prediksi (`y_pred`), dan judul plot (`title`). Fungsi ini menghitung confusion matrix menggunakan `confusion_matrix` dari scikit-learn, kemudian menampilkannya dalam bentuk visual menggunakan `ConfusionMatrixDisplay` dengan colormap biru (`Blues`). \n",
+    "\n",
+    "Setelah fungsi didefinisikan, confusion matrix untuk masing-masing model (Random Forest, SVM, dan KNN) divisualisasikan secara terpisah. Visualisasi confusion matrix ini sangat penting untuk memahami performa model dalam mengklasifikasikan setiap kelas, serta untuk mengidentifikasi pola kesalahan prediksi yang mungkin terjadi pada data uji."
    ]
   },
   {
